--- a/index.html
+++ b/index.html
@@ -83,7 +83,7 @@
         </div>
       </div>
     </div>
-    <div>MIKHMON QR CODE SCANNER <br>Powered by <a href="http://www.webqr.com">webqr.com</a></div>
+    <div>MIKHMON QR SCANNER <br>Powered by <a href="http://www.webqr.com">webqr.com</a></div>
   </center>
 <canvas style="display:none;" id="qr-canvas" width="800" height="600"></canvas>
 <script type="text/javascript">load();</script>
