--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
   <meta name="theme-color" content="#000000" />
   
-<title>MIKHMON QR CODE SCANNER</title>
+<title>LIBELS QR-Scanner</title>
   <style>
     body{
       background-color: #000000;
@@ -76,17 +76,16 @@
               <div class="btn" id="reload" onclick="location.reload();"><i class="icon icon-arrows-cw">&#xe800;</i> Reload Camera</div>
             </div>
             <div style="display: table-cell; padding:3px;">
-              <!-- <div class="btn" onclick="document.location = 'googlechrome://navigate?url=https://laksa19.github.io/myqr/';"></div> -->
-              <a class="btn" href="intent://laksa19.github.io/myqr#Intent;scheme=http;package=com.android.chrome;end"><i class="icon icon-chrome-1">&#xf268;</i> Open in Chrome</a>
+              <!-- <div class="btn" onclick="document.location = 'googlechrome://navigate?url=https://libelswifi.github.io';"></div> -->
+              <a class="btn" href="intent://libelswifi.github.io/#Intent;scheme=http;package=com.android.chrome;end"><i class="icon icon-chrome-1">&#xf268;</i> Open in Chrome</a>
             </div>
           </div>
         </div>
       </div>
     </div>
-    <div>MIKHMON QR SCANNER <br>Powered by <a href="http://www.webqr.com">webqr.com</a></div>
+    <div>LIBELS QR-Scanner <br>Powered by <a href="http://www.webqr.com">webqr.com</a></div>
   </center>
 <canvas style="display:none;" id="qr-canvas" width="800" height="600"></canvas>
 <script type="text/javascript">load();</script>
 </body>
 </html>
-
