--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
   <meta name="theme-color" content="#000000" />
   
-<title>LIBELS QR-Scanner</title>
+<title>QR-Scanner</title>
   <style>
     body{
       background-color: #000000;
@@ -83,7 +83,7 @@
         </div>
       </div>
     </div>
-    <div>LIBELS QR-Scanner <br>Powered by <a href="http://www.webqr.com">webqr.com</a></div>
+    <div>QR-Scanner <br>Powered by <a href="http://www.webqr.com">webqr.com</a></div>
   </center>
 <canvas style="display:none;" id="qr-canvas" width="800" height="600"></canvas>
 <script type="text/javascript">load();</script>
